Additional CSS layout tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
           </label>
         </div>
         <div class="booking-btns">
-          <button class="cost-button">Estimated Trip Cost</button>
+          <button class="cost-button">Estimate Trip Cost</button>
           <button class="book-button">Book Trip</button>
         </div>
       </article>
