Display welcome message to user

--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,15 @@
         </nav>
       </section>
       <section class="nav-right">
-        <div class="upper-right-nav">
-          <p id="welcome"></p> 
+          <div class="welcome">
+            <p>Welcome,</p>
+            <p id="welcomeName"></p>
+          </div>
+          <div class="total-spent">
+            <p class="total-title">TOTAL SPENT: </p>
+            <p class="total-amt">$5000</p>
+          </div>
           <button id="logoutBtn">LOG OUT</button>
-        </div>
-        <div class="lower-right-nav">
-          <p class="total-spent">TOTAL SPENT: $5000</p>
-        </div>
       </section>
     </header>
     <section class="booking-section">
