--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
           </div>
           <div class="total-spent">
             <p class="total-title">TOTAL SPENT: </p>
-            <p class="total-amt">$5000</p>
+            <p class="total-amt" id="totalAmt"></p>
           </div>
           <button id="logoutBtn">LOG OUT</button>
       </section>
@@ -57,8 +57,8 @@
           </label>
         </div>
         <div class="choice">
-          <label for="startDate">Departure date:
-            <input required type="date" id="startDateDrop" name="start" min="2000-01-01" max="2035-12-31">
+          <label for="startDateDrop">Departure date:
+            <input required type="date" id="startDateDrop" name="startDate" min="2021-01-01" max="2030-12-31">
           </label>
         </div>
         <div class="choice">
