Build displayAllTripCards() DOM functionality

--- a/src/index.html
+++ b/src/index.html
@@ -80,44 +80,7 @@
     <main>
       <div class="main-wrapper">
         <p class="box-grid-title">My Trips</p>
-        <section class="box-grid">
-          <article class="box">
-            <section class="box-top">
-              <div class="box-top-upper">
-                <img class="arrow" src="./images/arrow.png">
-              </div>
-              <div class="box-top-lower">
-                <p id="destination">${DESTINATION}</p>
-              </div>
-            </section>
-            <section class="box-bottom">
-              <div class="travel-info">
-                <label for=startDate>Start Date:
-                  <p class="data-small" id="startDate">${date}</p>
-                </label>
-              </div>
-              <div class="travel-info">
-                <label for=duration>Duration of Stay:
-                  <p class="data-small" id="duration">${days}</p>
-                </label>
-              </div>
-              <div class="travel-info">
-                <label for=activities>Suggested Activities: 
-                  <p class="data-small" id="activities">${array}</p>
-                </label>
-              </div>
-              <div class="travel-info">
-                <label for=travelers>Travelers: 
-                  <p class="data-small" id="travelers">${num}</p>
-                </label>
-              </div>
-              <div class="travel-info">
-                <label for=travelers>Trip Status: 
-                  <p class="data-small" id="tripStatus">${status}</p>
-                </label>
-              </div>
-            </section>
-          </article>
+        <section class="box-grid" id="cardGrid">
         </section>
       </div>
     </main>
