Build Traveler trips filtering methods

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
     </section>
     <main>
       <div class="main-wrapper">
-        <p class="box-grid-title">My Trips</p>
+        <p class="box-grid-title" id="gridTitle">My Trips</p>
         <section class="box-grid" id="cardGrid">
         </section>
       </div>
