Build recieveBookingInputs function

--- a/src/index.html
+++ b/src/index.html
@@ -72,8 +72,8 @@
           </label>
         </div>
         <div class="booking-btns">
-          <button class="cost-button">Estimate Trip Cost</button>
-          <button class="book-button">Book Trip</button>
+          <button class="cost-button" id="costBtn">Estimate Trip Cost</button>
+          <button class="book-button" id="bookBtn">Book Trip</button>
         </div>
       </article>
     </section>
