Add more hover state styling

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <header>
       <section class="nav-left">
         <div class="logo-container">
-          <img class="logo" src="./images/tt-logo-no-text.png">
+          <img class="logo" id="logo" src="./images/tt-logo-no-text.png">
         </div>
       </section>
       <section class="nav-center">
