Login page HTML complete

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <title>Travel Tracker</title>
   </head>
   <body>
-    <section class="login">
+    <section class="login hidden">
       <div class="login-box">
         <img class="logo-big" id="logoBig" src="./images/tt-logo.png">
         <form class="login-form" id="login-form">
@@ -21,7 +21,7 @@
         </form>
       </div>
     </section>
-    <section class="user-page hidden">
+    <section class="user-page">
       <header>
         <section class="nav-left">
           <div class="logo-container">
