Build cost estimate modal functionality and styling

--- a/src/index.html
+++ b/src/index.html
@@ -90,6 +90,8 @@
           </div>
         </article>
       </section>
+      <section class="modal" id="modal">
+      </section>
       <main>
         <div class="main-wrapper">
           <p class="box-grid-title" id="gridTitle">My Trips</p>
