--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
               <p id="welcomeName"></p>
             </div>
             <div class="total-spent">
-              <p class="total-title">TOTAL SPENT: </p>
+              <p class="total-title">Annual Travel Costs: </p>
               <p class="total-amt" id="totalAmt"></p>
             </div>
             <button id="logoutBtn">LOG OUT</button>
