--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,10 @@
         </article>
       </section>
       <section class="modal" id="modal">
+        <div class="booking-error hidden" id="bookingError">
+          <span class="close" id="modalClose">&times;</span>
+          Please fill out all required inputs!
+        </div>
       </section>
       <main>
         <div class="main-wrapper">
