--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
     <title>Travel Tracker</title>
   </head>
   <body>
-    <section class="login-page" id="loginPage">
+    <section class="login-page hidden" id="loginPage">
       <div class="login-box">
-        <img class="logo-big" id="logoBig" src="./images/tt-logo.png">
+        <img class="logo-big" id="logoBig" alt="Travel Tracker globe logo with company name beneath" src="./images/tt-logo.png">
         <form class="login-form" id="login-form">
           <label for="username">Username</label>
             <input type="text" name="username" id="username" class="login-form-field" placeholder="username">
@@ -27,16 +27,16 @@
         <span id="messageText"></span>
       </div>
     </section>
-    <section class="user-page hidden" id="userPage">
+    <section class="user-page" id="userPage">
       <header>
         <section class="nav-left">
           <div class="logo-container">
-            <img class="logo" id="logo" src="./images/tt-logo-no-text.png">
+            <img class="logo" id="logo" alt="Travel Tracker globe logo" src="./images/tt-logo-no-text.png">
           </div>
         </section>
         <section class="nav-center">
           <h1 class="title">Travel Tracker</h1>
-          <nav class="nav-buttons"> 
+          <nav class="nav-buttons">
             <button class="current-trips" id="navBtn">
               <i class="fas fa-plane"></i> Current Trips
             </button>
@@ -46,15 +46,15 @@
             <button class="previous-trips" id="navBtn">
               <i class="fas fa-passport"></i> Previous Trips
             </button>
-            <button class="pending-trips" id="navBtn">
+            <button class="pending-trips" id="navBtn>
               <i class="far fa-clock"></i> Pending Trips
             </button>
           </nav>
         </section>
         <section class="nav-right">
             <div class="welcome">
-              <p>Welcome,</p>
-              <p id="welcomeName"></p>
+              <h2>Welcome,</h2>
+              <h2 id="welcomeName"></h2>
             </div>
             <div class="total-spent">
               <p class="total-title">Annual Travel Costs: </p>
@@ -64,41 +64,41 @@
         </section>
       </header>
       <section class="booking-section">
-        <article class="booking-top">
-          <p>Plan Your Next Adventure!</p>
-        </article>
-        <article class="booking-bottom">
+        <h2 for="bookingForm" class="booking-top">
+          Plan Your Next Adventure!
+        </h2>
+        <form id="bookingForm" class="booking-bottom">
           <div class="choice">
-            <label for="drop">Select destination:
-              <select required class="drop-down" id="destinationDrop">
+            <label for="destinationDrop">Select destination:
+              <select required name="destination-menu" class="drop-down" id="destinationDrop">
                 <option value="0">Select destination</option>
               </select>
             </label>
           </div>
           <div class="choice">
             <label for="startDateDrop">Departure date:
-              <input required type="date" id="startDateDrop" name="startDate" min="2019-01-01" max="2030-12-31">
+              <input required name="start-date-menu" id="startDateDrop" type="date" min="2019-01-01" max="2030-12-31">
+            </label>
+          </div
+          <div class="choice"></div>
+            <label for="durationInput">Duration of trip:
+              <input required name="duration-input" id="durationInput" type="number" min="1">
             </label>
           </div>
           <div class="choice">
-            <label for="tripDuration">Duration of trip:
-              <input required id="durationInput" type="number" min="1">
-            </label>
-          </div>
-          <div class="choice">
-            <label for="travelersNum">Number of travelers:
-              <input required id="numTravelersInput" type="number" min="1">
+            <label for="travelersInput">Number of travelers:
+              <input required name="travelers-input" id="travelersInput" type="number" min="1">
             </label>
           </div>
           <div class="booking-btns">
-            <button class="cost-button" id="costBtn">Estimate Trip Cost</button>
-            <button class="book-button" id="bookBtn">Book Trip</button>
+            <button class="cost-button" id="costBtn" type="button" name="button">Estimate Trip Cost</button>
+            <button class="book-button" id="bookBtn" type="button" name="button">Book Trip</button>
           </div>
-        </article>
+        </form>
       </section>
       <main>
         <div class="main-wrapper">
-          <p class="box-grid-title" id="gridTitle">My Trips</p>
+          <h2 class="box-grid-title" id="gridTitle">My Trips</h2>
           <section class="box-grid" id="cardGrid">
           </section>
         </div>
