Pass final Lighthouse accessibility check

--- a/src/index.html
+++ b/src/index.html
@@ -37,16 +37,16 @@
         <section class="nav-center">
           <h1 class="title">Travel Tracker</h1>
           <nav class="nav-buttons">
-            <button class="current-trips" id="navBtn">
+            <button class="nav-btn" id="currentTripsButton">
               <i class="fas fa-plane"></i> Current Trips
             </button>
-            <button class="upcoming-trips" id="navBtn">
+            <button class="nav-btn" id="upcomingTripsButton">
               <i class="fas fa-globe-africa"></i> Upcoming Trips
             </button>
-            <button class="previous-trips" id="navBtn">
+            <button class="nav-btn" id="previousTripsButton">
               <i class="fas fa-passport"></i> Previous Trips
             </button>
-            <button class="pending-trips" id="navBtn>
+            <button class="nav-btn" id="pendingTripsButton>
               <i class="far fa-clock"></i> Pending Trips
             </button>
           </nav>
