Refactor sizing for error message modal

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
             <button class="nav-btn" id="previousTripsButton">
               <i class="fas fa-passport"></i> Previous Trips
             </button>
-            <button class="nav-btn" id="pendingTripsButton>
+            <button class="nav-btn" id="pendingTripsButton">
               <i class="far fa-clock"></i> Pending Trips
             </button>
           </nav>
@@ -69,15 +69,15 @@
         </h2>
         <form id="bookingForm" class="booking-bottom">
           <div class="choice">
-            <label for="destinationDrop">Select destination:
-              <select required name="destination-menu" class="drop-down" id="destinationDrop">
+            <label for="destinationMenu">Select destination:
+              <select required name="destination-menu" id="destinationMenu">
                 <option value="0">Select destination</option>
               </select>
             </label>
           </div>
           <div class="choice">
-            <label for="startDateDrop">Departure date:
-              <input required name="start-date-menu" id="startDateDrop" type="date" min="2019-01-01" max="2030-12-31">
+            <label for="startDateMenu">Departure date:
+              <input required name="start-date-menu" id="startDateMenu" type="date" min="2019-01-01" max="2030-12-31">
             </label>
           </div
           <div class="choice"></div>
