Fix modal tabbing, scrolling, and closing issues

--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,7 @@
         </form>
       </div>
     </section>
-    <section class="modal" id="modal">
-      <div class="error-modal hidden" id="errorModal">
-        <span class="close" id="modalClose">&times;</span>
-        <span id="messageText"></span>
-      </div>
+    <section class="modal hidden" id="modal">
     </section>
     <section class="user-page" id="userPage">
       <header>
