Complete logout functionality

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <title>Travel Tracker</title>
   </head>
   <body>
-    <section class="login-page hidden" id="loginPage">
+    <section class="login-page" id="loginPage">
       <div class="login-box">
         <img class="logo-big" id="logoBig" alt="Travel Tracker globe logo with company name beneath" src="./images/tt-logo.png">
         <form class="login-form" id="login-form">
@@ -23,7 +23,7 @@
     </section>
     <section class="modal hidden" id="modal">
     </section>
-    <section class="user-page" id="userPage">
+    <section class="user-page hidden" id="userPage">
       <header>
         <section class="nav-left">
           <div class="logo-container">
