Rename all instances of box to card

--- a/src/index.html
+++ b/src/index.html
@@ -94,8 +94,8 @@
       </section>
       <main>
         <div class="main-wrapper">
-          <h2 class="box-grid-title" id="gridTitle">My Trips</h2>
-          <section class="box-grid" id="cardGrid">
+          <h2 class="card-grid-title" id="gridTitle">My Trips</h2>
+          <section class="card-grid" id="cardGrid">
           </section>
         </div>
       </main>
