Complete inner card responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
       </section>
       <main>
         <div class="main-wrapper">
-          <h2 class="card-grid-title" id="gridTitle">My Trips</h2>
+          <h2 class="grid-title" id="gridTitle">My Trips</h2>
           <section class="card-grid" id="cardGrid">
           </section>
         </div>
