--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
     <section class="login-page" id="loginPage">
       <div class="login-box">
         <img class="logo-big" id="logoBig" alt="Travel Tracker globe logo with company name beneath" src="./images/tt-logo.png">
-        <form class="login-form" id="login-form">
+        <form tabindex=0 class="login-form" id="login-form">
           <label for="username">Username</label>
-            <input type="text" name="username" id="username" class="login-form-field" placeholder="username">
+            <input tabindex=1 type="text" name="username" id="username" class="login-form-field" placeholder="username">
           <label for="password">Password</label>
-            <input type="password" name="password" id="password" class="login-form-field" placeholder="password">
-          <button type="submit" class="login-button" id="loginBtn">Login</button>
+            <input tabindex=2 type="password" name="password" id="password" class="login-form-field" placeholder="password">
+          <button tabindex=3 type="submit" class="login-button" id="loginBtn">Login</button>
         </form>
       </div>
     </section>
