--- a/src/index.html
+++ b/src/index.html
@@ -8,19 +8,19 @@
     <script src="https://kit.fontawesome.com/ca77517a12.js" crossorigin="anonymous"></script>
     <title>Travel Tracker</title>
   </head>
+  <section class="login-page" id="loginPage">
+    <div class="login-container">
+      <img class="logo-big" alt="Travel Tracker globe logo and text" src="./images/tt-logo.png">
+      <form tabindex=0 class="login-form" id="login-form">
+        <label for="username">Username</label>
+          <input tabindex=1 type="text" name="username" id="username" class="login-input" placeholder="username">
+        <label for="password">Password</label>
+          <input tabindex=2 type="password" name="password" id="password" class="login-input" placeholder="password">
+        <button tabindex=3 type="submit" class="login-button" id="loginBtn">Login</button>
+      </form>
+    </div>
+  </section>
   <body>
-    <section class="login-page" id="loginPage">
-      <div class="login-box">
-        <img class="logo-big" id="logoBig" alt="Travel Tracker globe logo with company name beneath" src="./images/tt-logo.png">
-        <form tabindex=0 class="login-form" id="login-form">
-          <label for="username">Username</label>
-            <input tabindex=1 type="text" name="username" id="username" class="login-form-field" placeholder="username">
-          <label for="password">Password</label>
-            <input tabindex=2 type="password" name="password" id="password" class="login-form-field" placeholder="password">
-          <button tabindex=3 type="submit" class="login-button" id="loginBtn">Login</button>
-        </form>
-      </div>
-    </section>
     <section class="modal hidden" id="modal">
     </section>
     <section class="user-page hidden" id="userPage">
