Assign final color scheme

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
   <section class="login-page" id="loginPage">
     <div class="login-container">
       <img class="logo-big" alt="Travel Tracker globe logo and text" src="./images/tt-logo.png">
-      <form tabindex=0 class="login-form" id="login-form">
+      <form tabindex=-1 class="login-form" id="login-form">
         <label for="username">Username</label>
-          <input tabindex=1 type="text" name="username" id="username" class="login-input" placeholder="username">
+          <input tabindex=0 type="text" name="username" id="username" class="login-input" placeholder="username">
         <label for="password">Password</label>
-          <input tabindex=2 type="password" name="password" id="password" class="login-input" placeholder="password">
-        <button tabindex=3 type="submit" class="login-button" id="loginBtn">Login</button>
+          <input type="password" name="password" id="password" class="login-input" placeholder="password">
+        <button type="submit" class="login-button" id="loginBtn">Login</button>
       </form>
     </div>
   </section>
