feature/add-placeholder-text-to-duration

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
           </div
           <div class="choice"></div>
             <label for="durationInput">Duration of trip:
-              <input required name="duration-input" id="durationInput" type="number" min="1">
+              <input required name="duration-input" id="durationInput" type="number" min="1" placeholder="number of days">
             </label>
           </div>
           <div class="choice">
